--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Lexend:wght@100..900&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&family=Lexend:wght@100..900&display=swap');
 *{
     margin: 0;
     padding: 0;
@@ -7,14 +6,14 @@
 }
 
 :root{
-     --regular-font: "Inter";
+     --regular-font: "Figtree";
      --bold-font: "Lexend";
-     --main-color: rgb(15, 78, 203);
+     --main-color: rgb(10, 59, 156);
 }
 
 body{
        font-family: var(--regular-font);
-       background-color: rgb(248, 250, 255);
+       background-color: rgb(243, 245, 250);
 }
 
 ul{
@@ -29,6 +28,16 @@ img{
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+::-webkit-scrollbar {
+       width: 7px;
+}
+::-webkit-scrollbar-track {
+       background: #f1f1f1; 
+}
+::-webkit-scrollbar-thumb {
+         background: var(--main-color)
 }
 
 .inner-row{
@@ -71,7 +80,7 @@ header{
       font-size: 16px;
       color: #222;
       position: relative;
-      padding-bottom: 10px;
+      padding-bottom: 8px;
 }
 
 .header-content ul li a:hover,
