--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@
      --regular-font: "Figtree";
      --bold-font: "Lexend";
      --main-color: rgb(10, 59, 156);
+     --secondary-color: rgb(37, 189, 194);
 }
 
 body{
