--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@
      --bold-font: "Lexend";
      --main-color: rgb(10, 59, 156);
      --secondary-color: rgb(37, 189, 194);
+     --color: #ffc803;
 }
 
 body{
