--- a/src/css/home.css
+++ b/src/css/home.css
@@ -547,3 +547,206 @@
         font-size: 18px;
         margin-bottom: 10px;
 }
+
+.cta-strip{
+       display: flex;
+       gap: 50px;
+       margin-top: 50px;
+       align-items: center;
+}
+.cta-strip h3{
+       font-size: 40px;
+       font-weight: 400;
+       line-height: 1.6;
+}
+.cta-strip a{
+       width: 240px;
+       flex-shrink: 0;
+       height: 55px;
+       display: flex;
+       background: var(--main-color);
+       border-radius: 7px;
+       -webkit-border-radius: 7px;
+       -moz-border-radius: 7px;
+       -ms-border-radius: 7px;
+       -o-border-radius: 7px;
+       color: whitesmoke;
+       justify-content: center;
+       align-items: center;
+}
+.cta-strip a span{
+       display: flex;
+       margin-top: 2px;
+}
+
+.testimonials-section{
+        padding: 100px 0;
+        background: #091542;
+}
+
+.testimonials-intro{
+        width: 900px;
+        margin: auto;
+        text-align: center;
+}
+.testimonials-intro h3{
+       font-size: 18px;
+       font-weight: 500;
+       color: var(--secondary-color)
+}
+.testimonials-intro h1{
+        font-size: 55px;
+        font-family: var(--bold-font);
+        font-weight: 600;
+        margin: 10px 0;
+        color: whitesmoke;
+}
+.testimonials-row{
+       margin-top: 60px;
+       max-width: 100vw;
+       overflow: hidden;
+}
+.testimonials-scroller{
+       display: flex;
+       gap: 30px;
+       animation: scrollslide 200s linear infinite;
+       -webkit-animation: scrollslide 200s linear infinite;
+       width: max-content;
+}
+.testimonials-scroller.disabled{
+       animation: none;
+       -webkit-animation: none;
+}
+.testimonial-moja{
+      width: 300px;
+      background:rgba(187, 223, 237, 0.197);
+      display: flex;
+      flex-direction: column;
+      flex-shrink: 0;
+      justify-content: space-between;
+      gap: 40px;
+      border-radius: 20px;
+      -webkit-border-radius: 20px;
+      -moz-border-radius: 20px;
+      -ms-border-radius: 20px;
+      -o-border-radius: 20px;
+      padding: 30px 20px;
+      text-align: center;
+}
+.testimonial-moja .top-part{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+}
+.testimonial-moja img{
+        width: 20px;
+        height: 20px;
+        margin: 20px auto;
+        filter: invert(81%) sepia(55%) saturate(2182%) hue-rotate(356deg) brightness(101%) contrast(101%);
+}
+
+.testimonial-moja p.saying{
+        font-size: 16px;
+        line-height: 1.6;
+        color: gainsboro;
+}
+.testimonial-moja .stars{
+        display: flex;
+        justify-content: center;
+        gap: 10px;
+        margin: 10px 0 0 0;
+}
+.testimonial-moja .stars span{
+       font-size: 20px;
+       color: var(--color);
+}
+.testimonial-moja h4{
+       font-size: 20px;
+       color: gainsboro;
+       font-weight: 500;
+}
+.testimonial-moja p{
+       font-size: 14px;
+       color: rgb(207, 207, 207);
+}
+
+
+@keyframes scrollslide{
+       to{
+              transform: translateX(-50%);
+              -webkit-transform: translateX(-50%);
+              -moz-transform: translateX(-50%);
+              -ms-transform: translateX(-50%);
+              -o-transform: translateX(-50%);
+  }
+  }
+
+
+  .blog-section{
+        padding: 100px 0;
+  }
+
+  .blog-intro{
+       display: flex;
+       gap: 40px;
+       align-items: center;
+  }
+  .blog-intro h2{
+        font-size: 55px;
+        width: 600px;
+        flex-shrink: 0;
+  }
+
+  .blog-intro p{
+       font-size: 18px;
+       line-height: 1.5;
+  }
+
+  .blog-intro a{
+       flex-shrink: 0;
+       display: flex;
+       width: 200px;
+       height: 50px;
+       align-items: center;
+       justify-content: center;
+       border: 2px solid var(--main-color);
+       border-radius: 7px;
+       -webkit-border-radius: 7px;
+       -moz-border-radius: 7px;
+       -ms-border-radius: 7px;
+       -o-border-radius: 7px;
+       font-size: 15px;
+       gap: 5px;
+}
+.blog-intro a span{
+       display: flex;
+}
+
+.blog-content-row{
+       display: grid;
+       grid-template-columns: repeat(3, 1fr);
+       gap: 30px;
+       margin-top: 60px;
+}
+
+.blog-image{
+       height: 500px;
+       margin-bottom: 20px;
+}
+
+.blog-image img{
+       border-radius: 20px;
+       -webkit-border-radius: 20px;
+       -moz-border-radius: 20px;
+       -ms-border-radius: 20px;
+       -o-border-radius: 20px;
+}
+
+.blog-moja h3{
+       font-size: 18px;
+       font-weight: 400;
+}
+.blog-moja h1{
+        font-size: 35px;
+        font-weight: 500;
+}
