--- a/src/css/home.css
+++ b/src/css/home.css
@@ -733,6 +733,12 @@
 .blog-image{
        height: 500px;
        margin-bottom: 20px;
+       overflow: hidden;
+       border-radius: 20px;
+       -webkit-border-radius: 20px;
+       -moz-border-radius: 20px;
+       -ms-border-radius: 20px;
+       -o-border-radius: 20px;
 }
 
 .blog-image img{
@@ -741,15 +747,33 @@
        -moz-border-radius: 20px;
        -ms-border-radius: 20px;
        -o-border-radius: 20px;
+       transition: all 0.8s ease;
+       -webkit-transition: all 0.8s ease;
+       -moz-transition: all 0.8s ease;
+       -ms-transition: all 0.8s ease;
+       -o-transition: all 0.8s ease;
+}
+.blog-moja:hover .blog-image img{
+       transform: scale(1.1);
+       -webkit-transform: scale(1.1);
+       -moz-transform: scale(1.1);
+       -ms-transform: scale(1.1);
+       -o-transform: scale(1.1);
 }
 
 .blog-moja h3{
-       font-size: 18px;
+       font-size: 16px;
        font-weight: 400;
+       margin-bottom: 10px;
 }
 .blog-moja h1{
-        font-size: 35px;
+        font-size: 30px;
+        font-family: var(--bold-font);
         font-weight: 500;
+}
+.blog-moja:hover h1{
+       color: var(--main-color);
+       cursor: pointer;
 }
 
 
