--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&family=Lexend:wght@100..900&display=swap');
+
+/* @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap'); */
 *{
     margin: 0;
     padding: 0;
@@ -6,7 +8,7 @@
 }
 
 :root{
-     --regular-font: "Figtree";
+     --regular-font: "Figtree", sans-serif;
      --bold-font: "Lexend";
      --main-color: rgb(10, 59, 156);
      --secondary-color: rgb(37, 189, 194);
@@ -227,12 +229,48 @@ header{
        margin-bottom: 20px;
 }
 
+/* Book styles */
+.booking-wrapper{
+        padding: 80px 0;
+}
+.booking-intro{
+        width: 950px;
+        margin: auto;
+        text-align: center;
+}
+.booking-intro h2{
+        font-size: 50px;
+        margin-bottom: 10px;
+}
+.booking-intro p{
+        font-size: 17px;
+        line-height: 1.6;
+}
 
-
-
-
-
-
+.booking-form{
+       width: 900px;
+       margin: 50px auto;
+       padding: 30px;
+       background: white;
+       border-radius: 20px;
+       -webkit-border-radius: 20px;
+       -moz-border-radius: 20px;
+       -ms-border-radius: 20px;
+       -o-border-radius: 20px;
+}
+.booking-form .form-row.split{
+       display: grid;
+       grid-template-columns: 1fr 1fr;
+       gap: 20px
+}
+.booking-form .form-row label{
+       font-size: 15px;
+       display: block;
+       margin-bottom: 5px;
+}
+.booking-form .form-row{
+       margin-bottom: 20px;
+}
 
 
 
@@ -338,20 +376,27 @@ footer{
       .header-content ul{
              display: none;
       }
+      .booking-intro,
+      .booking-form{
+           width: 90%;
+      }
 }
 
 @media(max-width: 768px){
-         .footer-content{
-                  grid-template-columns: 1fr;
-         };
-}
-
-
-@media(max-width: 768px){
-        .header-action a{
+       .header-action a{
               display: none;
         }
+         .footer-content{
+                  grid-template-columns: 1fr;
+         }
+         .booking-intro h2{
+                font-size: 40px;
+         }
+         .booking-form .form-row.split{
+                grid-template-columns: 1fr;
+         }
 }
+
 
 @media(max-width: 500px){
        .sidebar-content{
